--- a/admin/src/pages/userList/userList.css
+++ b/admin/src/pages/userList/userList.css
@@ -77,7 +77,7 @@
   }
 
   .createButton {
-    width: 60%;
+    width: 100%;
     margin-right: 5px !important;
     margin-top: 10px;
   }
